Update to druid 0.7.0 and publish to maven central. Also, other things.
- Bump version to 0.4.0.
- Update storm to 0.9.3.
- Update scala-util to 1.9.2.
- Update java-util to 0.26.14.